Don't accept drops on non-collectionheader items.

Caused the copy dialog to come up.

BUG: 291068
FIXED-IN: 2.6